manually configured swagger
