# routes/doctors.js
@@ -14,6 +14,41 @@ router.post(
   '/',
   validate.createDoctorRules(),
   validate.checkValidation,
+  (req, res, next) => {
+    // Because Swagger isn't autogenerating the correct parameters:
+    /*  #swagger.auto = false
+
+        #swagger.path = '/doctors'
+        #swagger.method = 'post'
+        #swagger.produces = ['application/json']
+        #swagger.consumes = ['application/json']
+
+        #swagger.parameters['body'] = {
+            in: 'body',
+            description: '',
+            required: true,
+            schema: {
+                firstName: "any",
+                lastName: "any",
+                title: "any",
+                specialty: "any",
+                organization: "any",
+                phone: "any",
+                fax: "any",
+                website: "any"
+            }
+        }
+        #swagger.responses[204] = {
+        description: "No Content" }
+
+        #swagger.responses[400] = {
+        description: "Bad Request" }
+        
+        #swagger.responses[500] = {
+        description: "Internal Service Error" }
+    */
+    next();
+  },
   utilities.errorHandler(doctorsController.addDoctor)
 );
 
@@ -22,24 +57,79 @@ router.put(
   '/:id',
   validate.updateDoctorRules(),
   validate.checkValidation,
+  (req, res, next) => {
+    /*  #swagger.auto = false
+
+        #swagger.path = '/doctors/{id}'
+        #swagger.method = 'put'
+        #swagger.produces = ['application/json']
+        #swagger.consumes = ['application/json']
+
+        #swagger.parameters['id'] = {
+            in: 'path',
+            description: 'User ID.',
+            required: true,
+            type: 'string'
+        }
+
+        #swagger.parameters['body'] = {
+            in: 'body',
+            description: '',
+            required: true,
+            schema: {
+                firstName: "any",
+                lastName: "any",
+                title: "any",
+                specialty: "any",
+                organization: "any",
+                phone: "any",
+                fax: "any",
+                website: "any"
+            }
+        }
+        #swagger.responses[204] = {
+        description: "No Content" }
+
+        #swagger.responses[400] = {
+        description: "Bad Request" }
+        
+        #swagger.responses[500] = {
+        description: "Internal Service Error" }
+    */
+    next();
+  },
   utilities.errorHandler(doctorsController.updateDoctor)
 );
 
 // Delete Doctor
-router.delete('/:id', utilities.errorHandler(doctorsController.removeDoctor));
+router.delete(
+  '/:id',
+  (req, res, next) => {
+    /*  #swagger.auto = false
 
-// Intentional Error for testing the error handler
-router.get(
-  '/ex/example',
-  utilities.errorHandler((req, res, next) => {
-    try {
-      const data = undefined;
-      console.log(data.name);
-      throw new Error('Example error');
-    } catch (error) {
-      next(error);
-    }
-  })
+      #swagger.path = '/doctors/{id}'
+      #swagger.method = 'delete'
+      #swagger.produces = ['application/json']
+      #swagger.consumes = ['application/json']
+
+      #swagger.parameters['id'] = {
+          in: 'path',
+          description: 'doctor ID.',
+          required: true,
+          type: 'string'
+      }
+      #swagger.responses[200] = {
+      description: "OK" }
+      
+      #swagger.responses[400] = {
+      description: "Bad Request" }
+      
+      #swagger.responses[500] = {
+      description: "Internal Service Error" }
+  */
+    next();
+  },
+  utilities.errorHandler(doctorsController.removeDoctor)
 );
 
 module.exports = router;
