# swagger-output.json
@@ -5,11 +5,11 @@
     "description": "A public directory containing all doctors within Utah Valley and their office contact information.",
     "version": "1.0.0"
   },
-  "host": "doctor-directory.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https",
-    "http"
+    "http",
+    "https"
   ],
   "paths": {
     "/api-docs": {
@@ -40,14 +40,6 @@
             "description": ""
           }
         }
-      },
-      "post": {
-        "description": "",
-        "responses": {
-          "422": {
-            "description": "Unprocessable Entity"
-          }
-        }
       }
     },
     "/doctors/{id}": {
@@ -69,33 +61,102 @@
       },
       "put": {
         "description": "",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
             "in": "path",
+            "description": "User ID.",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "title": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "specialty": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "organization": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "phone": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "fax": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "website": {
+                  "type": "string",
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "422": {
-            "description": "Unprocessable Entity"
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Service Error"
           }
         }
       },
       "delete": {
         "description": "",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
             "in": "path",
+            "description": "doctor ID.",
             "required": true,
             "type": "string"
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Service Error"
           }
         }
       }
@@ -118,12 +179,69 @@
         }
       }
     },
-    "/doctors/ex/example": {
-      "get": {
+    "/doctors": {
+      "post": {
         "description": "",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "title": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "specialty": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "organization": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "phone": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "fax": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "website": {
+                  "type": "string",
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Service Error"
           }
         }
       }
@@ -184,6 +302,16 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/error/example": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
